--- a/src/main/Resources/CloinsImprovedIroncladResources/localization/eng/DefaultMod-Card-Strings.json
+++ b/src/main/Resources/CloinsImprovedIroncladResources/localization/eng/DefaultMod-Card-Strings.json
@@ -49,5 +49,9 @@
   "CloinsImprovedIronclad:OrbSkill": {
     "NAME": "Get Orb",
     "DESCRIPTION": "Channel 1 Default Orb."
+  },
+  "CloinsImprovedIronclad:BloodWard": {
+    "NAME": "Blood Ward",
+    "DESCRIPTION": "Lose !M! HP. NL Gain !B! Block."
   }
 }
