--- a/src/main/Resources/CloinsImprovedIroncladResources/localization/eng/DefaultMod-Character-Strings.json
+++ b/src/main/Resources/CloinsImprovedIroncladResources/localization/eng/DefaultMod-Character-Strings.json
@@ -1,13 +1,13 @@
 {
   "CloinsImprovedIronclad:DefaultCharacter": {
     "NAMES": [
-      "The Default",
-      "the Default"
+      "Improved Ironclad",
+      "Improved Ironclad"
     ],
     "TEXT": [
-      "THE_DEFAULT exists and is valid. THE_DEFAULT wishes to T o uuuch# NL Second placeholder line of description text.",
-      "NL You TOUCH the heart.",
-      "Navigating an unlit street, you come across several hooded figures in the midst of some dark ritual. As you approach, they turn to you in eerie unison. The tallest among them bares fanged teeth and extends a long, pale hand towards you. NL ~\"Join~ ~us~ ~basic~ ~one,~ ~and~ ~feel~ ~the~ ~warmth~ ~of~ ~the~ ~Spire.\"~"
+      "You know, If you didn't want me to talk shit about you, you should have been here when I coded it, Coin.",
+      "NL You Spit on the heart, and call it a Bitch.",
+      "Navigating an unlit street, you come across several hooded figures in the midst of some dark ritual. As you approach, they turn to you in eerie unison. The tallest among them bares fanged teeth and extends a long, pale hand towards you. NL ~\"Join~ ~us~ ~Boi~ ~,~ ~and~ ~feel~ ~the~ ~warmth~ ~of~ ~the~ ~Spire.\"~"
     ]
   }
 }
