--- a/src/main/Resources/CloinsImprovedIroncladResources/localization/eng/DefaultMod-Character-Strings.json
+++ b/src/main/Resources/CloinsImprovedIroncladResources/localization/eng/DefaultMod-Character-Strings.json
@@ -5,7 +5,7 @@
       "Improved Ironclad"
     ],
     "TEXT": [
-      "You know, If you didn't want me to talk shit about you, you should have been here when I coded it, Coin.",
+      "You know, If you didn't want me to talk shit about you, NL you should have been here when I coded it, Coin.",
       "NL You Spit on the heart, and call it a Bitch.",
       "Navigating an unlit street, you come across several hooded figures in the midst of some dark ritual. As you approach, they turn to you in eerie unison. The tallest among them bares fanged teeth and extends a long, pale hand towards you. NL ~\"Join~ ~us~ ~Boi~ ~,~ ~and~ ~feel~ ~the~ ~warmth~ ~of~ ~the~ ~Spire.\"~"
     ]
