--- a/src/main/Resources/CloinsImprovedIroncladResources/localization/eng/DefaultMod-Card-Strings.json
+++ b/src/main/Resources/CloinsImprovedIroncladResources/localization/eng/DefaultMod-Card-Strings.json
@@ -58,5 +58,9 @@
     "NAME": "Parry and Riposte",
     "DESCRIPTION": "Deal !D! damage. NL If the enemy intends to attack NL gain !M! Plated Armor. NL Exhaust",
     "UPGRADE_DESCRIPTION": "Deal !D! damage. NL if the enemy intends to attack NL gain !M! Plated Armor."
+  },
+  "CloinsImprovedIronclad:Duster": {
+    "NAME": "Duster",
+    "DESCRIPTION": "Draw !M! Status Cards."
   }
 }
