Quick troubleshooting in Momentum and EXClash

--- a/src/main/Resources/CloinsImprovedIroncladResources/localization/eng/DefaultMod-Card-Strings.json
+++ b/src/main/Resources/CloinsImprovedIroncladResources/localization/eng/DefaultMod-Card-Strings.json
@@ -72,8 +72,8 @@
     "NAME": "EX Clash",
     "DESCRIPTION": "Deal 4 damage. NL If there are only Attacks in your hand NL Deal !D! damage."
   },
-  "CloinsImprovedIronclad:ForwardMomentum": {
-    "NAME": "Forward Momentum",
+  "CloinsImprovedIronclad:Momentum": {
+    "NAME": "Momentum",
     "DESCRIPTION": "Play the top !M! cards of your deck."
   }
 }
