--- a/src/main/Resources/CloinsImprovedIroncladResources/localization/eng/DefaultMod-Card-Strings.json
+++ b/src/main/Resources/CloinsImprovedIroncladResources/localization/eng/DefaultMod-Card-Strings.json
@@ -75,5 +75,9 @@
   "CloinsImprovedIronclad:Momentum": {
     "NAME": "Demonic Gambit",
     "DESCRIPTION": "Play the top !M! cards of your deck. Lose 2 Dexterity."
+  },
+  "CloinsImpprovedIronclad:Refuse": {
+    "NAME": "Dangerous Refuse",
+    "DESCRIPTION": "If this card is discarded from your hand, deal !D! damage to all enemies."
   }
 }
