--- a/src/main/Resources/CloinsImprovedIroncladResources/localization/eng/DefaultMod-Card-Strings.json
+++ b/src/main/Resources/CloinsImprovedIroncladResources/localization/eng/DefaultMod-Card-Strings.json
@@ -83,5 +83,13 @@
   "CloinsImprovedIronclad:Ferment": {
     "NAME": "Fermenting Poison",
     "DESCRIPTION": "Apply !M! Poison. NL Permanently Increase Poison applied by this card by 2."
+  },
+  "CloinsImprovedIronclad:Viscous": {
+    "NAME": "Viscous Poison",
+    "DESCRIPTION": "Apply !M! Poison. NL Draw 1 less card next turn."
+  },
+  "CloinsImprovedIronclad:Versatility": {
+    "NAME": "Versatile Strike",
+    "DESCRIPTION": "Deal !D! Damage. NL This card's effect depends on your class."
   }
 }
