--- a/src/main/Resources/CloinsImprovedIroncladResources/localization/eng/DefaultMod-Keyword-Strings.json
+++ b/src/main/Resources/CloinsImprovedIroncladResources/localization/eng/DefaultMod-Keyword-Strings.json
@@ -16,5 +16,14 @@
       "multikeyword"
     ],
     "DESCRIPTION": "Make sure the first element in the NAMES is the same as your PROPER_NAME. The rest is to match keywords like the single word keyword."
+  },
+  {
+    "NAMES":[
+      "choke",
+      "choking",
+      "Choke",
+      "Choking"
+],
+  "DESCRIPTION": "Whenever you play a card, the target loses HP equal to the amount of choke."
   }
 ]
