--- a/src/main/Resources/CloinsImprovedIroncladResources/localization/eng/DefaultMod-Keyword-Strings.json
+++ b/src/main/Resources/CloinsImprovedIroncladResources/localization/eng/DefaultMod-Keyword-Strings.json
@@ -18,11 +18,10 @@
     "DESCRIPTION": "Make sure the first element in the NAMES is the same as your PROPER_NAME. The rest is to match keywords like the single word keyword."
   },
   {
+    "PROPER_NAME": "Choked",
     "NAMES":[
-      "choke",
-      "choking",
-      "Choke",
-      "Choking"
+      "Choked",
+      "choked"
 ],
   "DESCRIPTION": "Whenever you play a card, the target loses HP equal to the amount of choke."
   }
