Fixed Calldown, made some balance changes

--- a/src/main/Resources/CloinsImprovedIroncladResources/localization/eng/DefaultMod-Card-Strings.json
+++ b/src/main/Resources/CloinsImprovedIroncladResources/localization/eng/DefaultMod-Card-Strings.json
@@ -78,7 +78,7 @@
   },
   "CloinsImprovedIronclad:Refuse": {
     "NAME": "Choking Gas Bomb",
-    "DESCRIPTION": "If this card is discarded from your hand, NL Apply !M! #yChoked to All Enemies."
+    "DESCRIPTION": "If this card is discarded from your hand, NL Apply !M! Choked to All Enemies."
   },
   "CloinsImprovedIronclad:Ferment": {
     "NAME": "Fermenting Poison",
