Reverted to 6.7 for troubleshooting with StrikeFear

--- a/src/main/Resources/CloinsImprovedIroncladResources/localization/eng/DefaultMod-Card-Strings.json
+++ b/src/main/Resources/CloinsImprovedIroncladResources/localization/eng/DefaultMod-Card-Strings.json
@@ -61,7 +61,7 @@
   },
   "CloinsImprovedIronclad:Duster": {
     "NAME": "Duster",
-    "DESCRIPTION": "Draw up to !M! Status Cards from your draw pile. NL Exhaust 1 card."
+    "DESCRIPTION": "Draw up to !M! Status Cards from your draw pile. NL Exhaust 1 card in your hand."
   },
   "CloinsImprovedIronclad:Pinch": {
     "NAME": "Pinch",
